fix(res): fix subreddit manager cutting off text

--- a/style/components/_res.scss
+++ b/style/components/_res.scss
@@ -1,5 +1,9 @@
 // main: ../main.scss
 
+#RESShortcutsViewport {
+  max-height: none !important;
+}
+
 .res .thing .tagline .author,
 .thing .tagline .author {
   border-radius: 2px !important;
